# orator

./: .gitignore  Cargo.toml  LICENSE  README.md  SKILL.md  flake.nix  hotwords.txt
nix/: Info.plist  home-module.nix  package.nix
scripts/: download-model.sh
src/: audio.rs  hotkey.rs  inject.rs  main.rs  overlay.rs  recognizer.rs
src/overlay/: macos.rs
